--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-# Core Machine Learning
-tensorflow>=2.10.0
+# --- Machine Learning & Deep Learning ---
+tensorflow>=2.15.0
 keras>=3.0.0
+scikit-learn>=1.2.0
 
-# Audio Processing
+# --- Audio Processing ---
 librosa>=0.10.0
 soundfile>=0.12.1
 audioread>=3.0.0
 
-# Mathematical Operations
+# --- Data Manipulation ---
 numpy>=1.23.5
 pandas>=1.5.0
 
-# Visualization (Optional but recommended)
+# --- Visualization ---
 matplotlib>=3.6.0
+seaborn>=0.12.0
